# gazer

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/cli/: collector.rs  exporter.rs  mod.rs  remover.rs
src/collector/: account_collector.rs  mod.rs  otterprovider.rs  transaction_collector.rs
src/collector/bindings/: ierc20.rs  mod.rs  safe.rs  safe_factory.rs
src/types/: gazer.rs  mod.rs
